--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
-askama = "0"
+askama = { version = "0", default-features = false }
 bytes = "1"
 prost = "0.11"
 prost-types = "0.11"
