--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ askama = { version = "0", default-features = false }
 bytes = "1"
 prost = "0.11"
 prost-types = "0.11"
+regex = "1.9.5"
 
 [profile.release]
 strip = "debuginfo"
